[project]
name = "asimpy"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Discrete event simulation using async/await"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
readme = "README.md"
dependencies = [
]

[project.urls]
Repository = "https://github.com/gvwilson/asimpy"
Documentation = "https://asimpy.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asimpy"]

[tool.hatch.version]
path = "src/asimpy/__init__.py"

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "build>=1.4.0",
    "coverage>=7.13.5",
    "mkdocstrings-python>=2.0.3",
    "polars>=1.39.3",
    "prettytable>=3.17.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "simpy>=4.1.1",
    "twine>=6.2.0",
    "ty>=0.0.11",
    "vl-convert-python>=1.9.0.post1",
    "zensical>=0.0.31",
]
